--- a/pepeizqs deals web/Pages/Componentes/Cuenta/Accesos.razor
+++ b/pepeizqs deals web/Pages/Componentes/Cuenta/Accesos.razor
@@ -3,6 +3,15 @@
 @inject NavigationManager NavManager
 
 <style>
+    .caja-diseño {
+        background: linear-gradient(180deg, var(--fondoOscuro) 0%, var(--fondoMinimo) 211.07%);
+        border: 2px solid var(--fondoOscuro);
+        box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.28),0px 0px 2px 0px rgba(0, 0, 0, 0.24);
+        border-radius: 5px;
+    }
+</style>
+
+<style>
     .boton-accesos {
         color: var(--colorEnlace);
         background: transparent;
@@ -19,7 +28,7 @@
         }
 </style>
 
-<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); max-width: 600px; padding: 40px; margin: auto; margin-top: 50px;">
+<div class="caja-diseño" style="max-width: 600px; padding: 40px; margin: auto; margin-top: 50px;">
     <div style="display: flex; align-items: center;">
 
         @if (mostrarLogin == true)
