--- a/pepeizqs deals web/Pages/Componentes/Cuenta/ContrasenaResetear.razor
+++ b/pepeizqs deals web/Pages/Componentes/Cuenta/ContrasenaResetear.razor
@@ -6,9 +6,18 @@
 
 @inject UserManager<Usuario> UserManager
 
+<style>
+    .caja-diseño {
+        background: linear-gradient(180deg, var(--fondoOscuro) 0%, var(--fondoMinimo) 211.07%);
+        border: 2px solid var(--fondoOscuro);
+        box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.28),0px 0px 2px 0px rgba(0, 0, 0, 0.24);
+        border-radius: 5px;
+    }
+</style>
+
 @if (codigo != null)
 {
-    <div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); max-width: 600px; padding: 40px; margin: auto;">
+    <div class="caja-diseño" style="max-width: 600px; padding: 40px; margin: auto;">
         <div class="texto-info">@Herramientas.Idiomas.BuscarTexto(idioma, "String1", "ResetPassword")</div>
 
         <hr>
