--- a/pepeizqs deals web/Pages/Componentes/Secciones/UltimasNoticias.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/UltimasNoticias.razor
@@ -89,11 +89,18 @@
 			}
 		}
 
-
-
 		<link rel="canonical" href="@enlace" />
 	</HeadContent>
 }
+
+<style>
+	.caja-diseño {
+		background: linear-gradient(180deg, var(--fondoOscuro) 0%, var(--fondoMinimo) 211.07%);
+		border: 2px solid var(--fondoOscuro);
+		box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.28),0px 0px 2px 0px rgba(0, 0, 0, 0.24);
+		border-radius: 5px;
+	}
+</style>
 
 <style>
 	.imagen-expandir {
@@ -123,7 +130,7 @@
 		<div style="display: flex; flex-direction: column; gap: 30px; margin-top: 20px;">
 			@foreach (var noticiaMostrar in noticiasMostrar)
 			{
-				<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px; display: flex; align-items: center; gap: 30px;">
+				<div class="caja-diseño" style="padding: 30px; display: flex; align-items: center; gap: 30px;">
 					<div style="width: 50%;">
 						<a href="/news/@noticiaMostrar.Id/">
 							<img src="@noticiaMostrar.Imagen" class="imagen-expandir" style="width: 100%; height: 100%; border: 1px solid var(--fondoBotonPequeño);" />
@@ -152,16 +159,16 @@
 
 										if (texto.Contains("<div") == true)
 										{
-												int int2 = texto.IndexOf(">");
-												texto = texto.Remove(0, int2 + 1);
+											int int2 = texto.IndexOf(">");
+											texto = texto.Remove(0, int2 + 1);
 										}
 									}
 									else
 									{
 										if (texto.Contains("<") == true)
 										{
-												int int1 = texto.IndexOf("<");
-												texto = texto.Remove(int1, texto.Length - int1);
+											int int1 = texto.IndexOf("<");
+											texto = texto.Remove(int1, texto.Length - int1);
 										}
 									}
 								}
